--- a/package.json
+++ b/package.json
@@ -26,5 +26,17 @@
     "expect": "^26.0.1",
     "jest-junit": "^3.3.0",
     "react-test-renderer": "^16.2.0"
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   }
 }
